// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldWrapper/HintText > should render correctly 1`] = `
<DocumentFragment>
  <span
    class="sc-bczSft jqHUNi"
    data-rc="DisclaimerR"
  >
    Hint text
  </span>
</DocumentFragment>
`;

exports[`FieldWrapper/HintText should render correctly 1`] = `
<DocumentFragment>
  <span
    class="sc-bcXHqe TOXwu"
    data-rc="DisclaimerR"
  >
    Hint text
  </span>
</DocumentFragment>
`;
